Fix todo text to align to top

--- a/src/styles.css
+++ b/src/styles.css
@@ -35,7 +35,11 @@ header h1 {
 p {
   width: 90%;
   margin: 0;
-  padding: 0.5em;
+  padding: 0 0.5em;
+  height: 100%;
+  position: absolute; 
+  top: 0;
+  vertical-align:top;
 }
 
 main {
@@ -65,10 +69,6 @@ li {
 }
 
 .pure-u-18-24 {
+  position: relative;
   height: 100%;
-}
-
-p {
-  height: 100%;
-  vertical-align: top;
 }
